# moete-rs

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  LICENSE  README.md  rust-toolchain.toml  rustfmt.toml
.github/workflows/: rust-clippy.yml
moete/: Cargo.toml
moete-core/: Cargo.toml  build.rs
moete-core/src/: branding.rs  config.rs  emotes.rs  lib.rs  memory.rs  types.rs
moete-core/src/models/: markov.rs  mod.rs  shortcut.rs
moete-core/src/state/: mod.rs
moete-database/: Cargo.toml
moete-database/src/: lib.rs
moete-database/src/models/: counter.rs  markov.rs  mod.rs  shortcut.rs
moete-discord/: Cargo.toml
moete-discord/src/: cdn.rs  checks.rs  color.rs  embed.rs  help.rs  lib.rs  paginate.rs  user.rs  webhook.rs
moete-discord/src/poise_builtins/: util.rs
moete-ext/: Cargo.toml  build.rs
moete-ext/files/: commands.sample.json
moete-ext/src/: currencies.rs  currency.rs  lib.rs
moete-framework/: Cargo.toml
moete-framework/src/: lib.rs
moete-infra/: Cargo.toml
moete-infra/src/: lib.rs
moete-infra/src/db/schema/: configuration.rs  counter.rs  markov.rs  mod.rs  shortcut.rs
moete-infra/src/models/: configuration.rs  counter.rs  markov.rs  mod.rs  shortcut.rs
moete-infra/src/repositories/: configuration.rs  counter.rs  markov.rs  mod.rs  shortcut.rs
moete-infra/src/services/: configuration.rs  counter.rs  markov.rs  shortcut.rs
moete-web/: Cargo.toml
moete-web/src/: lib.rs  web.rs
moete-web/templates/: emotes.tmpl
moete/src/: events.rs  handler.rs  main.rs  routines.rs
moete/src/commands/: mod.rs
moete/src/commands/counter/: list.rs  listener.rs  mod.rs
moete/src/commands/emote/: add.rs  clone.rs  info.rs  listener.rs  main.rs  mod.rs  refresh.rs  regexes.rs  remove.rs  search.rs  text.rs
moete/src/commands/markov/: learn.rs  listener.rs  mod.rs  random.rs  text.rs
moete/src/commands/math/: calculation.rs  factorial.rs  mod.rs
moete/src/commands/pakb/: banner.rs  data.rs  mod.rs
moete/src/commands/role/: color.rs  housekeeping.rs  list.rs  mod.rs  remove.rs
moete/src/commands/user_macros/: listener.rs  macros.rs  main.rs  mod.rs
moete/src/commands/utility/: configuration.rs  currency.rs  google.rs  help.rs  invite.rs  machine.rs  mod.rs  nhentai.rs  ping.rs  server.rs  urban.rs
src/: config.rs  events.rs  main.rs  routines.rs  state.rs
src/builtins/: mod.rs  paginate.rs
src/builtins/bot/: mod.rs  prefixes.rs
src/builtins/discord/: cdn.rs  color.rs  embed.rs  help.rs  mod.rs  paginate.rs  user.rs  webhook.rs
src/builtins/poise/: color.rs  embed.rs  mod.rs  paginate.rs
src/commands/: mod.rs  ping.rs  urban.rs
src/commands/counter/: list.rs  listener.rs  mod.rs
src/commands/emote/: emote.rs  listener.rs  main.rs  mod.rs  search.rs  text.rs
src/commands/markov/: listener.rs  mod.rs  text.rs
src/commands/math/: calculation.rs  factorial.rs  mod.rs
src/commands/pakb/: banner.rs  mod.rs
src/commands/role/: color.rs  list.rs  mod.rs
src/commands/utility/: google.rs  help.rs  math.rs  mod.rs  ping.rs  urban.rs
src/core/: config.rs  emotes.rs  mod.rs
src/core/data/: mod.rs
src/core/models/: counter.rs  markov.rs  mod.rs
src/core/state/: mod.rs
src/state/: config.rs  mod.rs  state.rs
