[package]
name = "moete"
version = "0.0.1"
edition = "2024"
authors = ["xjunko <phony@kafu.ovh>"]
repository = "https://github.com/xjunko/moete-rs"

[dependencies]
toml = "0.9.5"
serenity = "0.12"
poise = "0.6.1"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
serde = "1.0.219"
log = "0.4.28"
env_logger = "0.11.8"
reqwest = { version = "0.12.23", features=["json"]}
serde_json = "1.0.143"
rand = "0.9.2"
