[package]
name = "moete"
version = "0.0.1"
edition = "2024"
authors = ["xjunko <phony@kafu.ovh>"]
repository = "https://github.com/xjunko/moete-rs"

[dependencies]
toml = "0.9.5"
serenity = "0.12"
poise = { version = "0.6.1", features = ["cache"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
serde = "1.0.219"
reqwest = { version = "0.12.23", features = ["json"] }
serde_json = "1.0.143"
rand = "0.9.2"
regex = "1.11.2"
once_cell = "1.21.3"
marukov = "0.0.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
dotenv = "0.15.0"
mimalloc = "0.1.48"
libc = "0.2.175"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
