[package]
name = "moete-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
moete-ext = { path = "../moete-ext" }
once_cell.workspace = true
poise = { workspace = true }
serenity = { workspace = true }
tokio.workspace = true
tracing = { workspace = true }
libc.workspace = true
moete-database = { version = "0.1.7", path = "../moete-database" }
sqlx.workspace = true
