[package]
name = "moete-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
moete-ext = { path = "../moete-ext" }
once_cell.workspace = true
poise = { workspace = true }
serenity = { workspace = true }
tokio.workspace = true
tracing = { workspace = true }
libc.workspace = true
moete-database = { path = "../moete-database" }
sqlx.workspace = true
