[package]
name = "moete-ext"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = []
macros = []

[dependencies]
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[build-dependencies]
serde.workspace = true
serde_json.workspace = true
