[package]
name = "moete-infra"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
dashmap.workspace = true
moka = { version = "0.12.15", features = ["future"] }
paste = "1.0.15"
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror = "2.0.19"
tracing.workspace = true
