[package]
name = "moete"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
moete-framework = { path = "../moete-framework" }
moete-core = { path = "../moete-core" }
moete-discord = { path = "../moete-discord" }
toml = { workspace = true }
serenity = { workspace = true }
poise = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
marukov = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenv = { workspace = true }
mimalloc = { workspace = true }
libc = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
evalexpr = { workspace = true }
