[package]
name = "moete"
version.workspace = true
authors.workspace = true
edition.workspace = true

[features]
default = []
macros = ["moete-ext/macros"]

[dependencies]
moete-core = { path = "../moete-core" }
moete-discord = { path = "../moete-discord" }
moete-ext = { path = "../moete-ext" }
serenity = { workspace = true }
poise = { workspace = true }
tokio = { workspace = true }
serde.workspace = true
reqwest = { workspace = true }
serde_json.workspace = true
rand = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
marukov = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenv = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
sys-info = "0.9.1"
humantime = "2.3.0"
human_format = "1.1.0"
rhai = { version = "1.23.6", features = ["sync"] }
plotters.workspace = true
